Changes since version 2.1.2
---------------------------

- Removed ice_default() method from proxies.

- Added an implementation of IceBox for C#.

- Fixed bug in Ice.Application that could cause appName() to return
  the empty string in some cases.

- The run time was obscuring the true origin (source file and
  line number) of some exceptions when rethrowing them. It
  now correctly shows the source of such exceptions
  in the stack trace.

- Added a new object adapter property, <adapter>.ReplicaGroupId, which
  allows adapters to be replicated. See the IceGrid chapter in the
  manual for more information.

- Added the proxy method ice_connectionId, which allows an application
  to control connection reuse.

- Added the new methods Ice.Util.initializeWithLogger() and
  Ice.Util.initializeWithPropertiesAndLogger(), which ensure that a
  custom logger is used to record any errors during communicator
  initialization.

- Ice will now listen on all local interfaces if no -h parameter is
  present in the endpoint configuration and no default host has been
  set. It will also listen to all interfaces if the -h parameter is
  set to 0.0.0.0. In such configurations the endpoints published in
  proxies will not contain the loopback interface (127.0.0.1) unless
  it is the only local interface present.

- The Equals method for Slice structures that are mapped to classes
  now returns false if the two structures being compared are not of
  the same type.

  Previously, a comparison such as

      derived.Equals(base)

  returned true if the base of part of derived was the same as base;
  with the new slice2cs compiler, this comparison returns false.

- The Slice mapping for sequences has been improved. The generated
  sequence class now contains the following additional properties and
  methods:

  - Capacity
  - TrimToSize
  - Sort
  - Reverse
  - BinarySearch
  - InsertRange
  - RemoveRange
  - GetRange
  - SetRange
  - LastIndexOf
  - Repeat
